# hermes-evolution

./: .env  .gitignore  README.md  pyproject.toml
config/: default.yaml
custom_skills/: example_skill.py
hermes/: .env.example  .gitignore  AGENTS.md
hermes/config/: databases.yaml
hermes/docs/: Hermes_设计文档.md
hermes/plugins/my_plugin/: hello_skill.py
hermes/src/: main.py
hermes/src/engines/: base.py  hermes_engine.py  sandbox.py
hermes/src/evolution/: knowledge_base.py  performance_analyzer.py  tool_provisioner.py  workflow_generator.py
hermes/src/executor/: iterative_executor.py
hermes/src/llm/: __init__.py
hermes/src/memory/: __init__.py  memory_store.py
hermes/src/message_bus/: models.py
hermes/src/orchestrator/: progress_tracker.py
hermes/src/plugin/: __init__.py  plugin_manager.py
hermes/src/processor/: context_manager.py  param_extractor.py  project_matcher.py  vector_store.py
plugins/my_plugin/: plugin.yaml
src/: main.py
src/engines/: claude_code_engine.py  opencode_engine.py
src/evolution/: evolution_recorder.py  instruction_learner.py  self_upgrade.py  vector_store.py
src/executor/: __init__.py  iterative_executor.py
src/im_gateway/: base.py
src/llm/: client.py
src/message_bus/: queue.py  router.py
src/operator/: __init__.py  db_client.py  ide_launcher.py  system_ops.py
src/orchestrator/: task_planner.py  task_queue.py  task_store.py
src/processor/: context_compressor.py  intent_recognizer.py  session_store.py
src/scanner/: __init__.py  project_scanner.py  rules_loader.py
src/skills/: base.py
(+15 files in other folders)
