[project]
name = "hermes"
version = "0.2.0"
description = "AI 编程信使系统 — 通过飞书发送消息，自动执行编程任务，自我进化"
authors = [{ name = "Hermes Team" }]
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9.0",
    "aiofiles>=23.0.0",
    "aiosqlite>=0.19.0",
    "lark-oapi>=1.0.0",
    "openai>=1.0.0",
    "anthropic>=0.30.0",
    "pyyaml>=6.0",
    "openpyxl>=3.1.0",
    "pyautogui>=0.9.54",
    "pillow>=10.0.0",
    "duckduckgo_search>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/hermes"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
